fix: header break on small screen

--- a/colorGame.css
+++ b/colorGame.css
@@ -35,7 +35,9 @@ h1{
 	margin: 0;
 	text-transform: uppercase;
 }
-
+ .heading-display{
+	 display:block
+ }
 
 #stripe{
 	background: white;
